@@ -66,6 +66,7 @@
         <version>3.11.0</version>
         <configuration>
           <release>${maven.compiler.release}</release>
+          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
       <plugin>
